exports[`codemod.recipes.namespaceToInterface > Converts namespaces to interfaces correctly > should migrate input.ts correctly 1`] = `
import type { ValueConversion, ValueConversionParseError } from "@com.mgmtp.a12.utils/utils-localization";
import type { DefaultLocalizerContextProvider, LocalizerContext, LocalizerContextProps, DefaultLocalizerContextProviderProps } from "@com.mgmtp.a12.utils/utils-localization-react";
const contextValue: LocalizerContextProps = {
    dataFormats: {},
    locale: { language: "en", country: "US" },
    localizer: () => undefined,
    conversion: {
        parseValue: () => ({ value: undefined }),
        formatValue: () => ""
    }
};
function MyComponent(props: DefaultLocalizerContextProviderProps): void {
    console.log(props.locale);
}
function useLocalizerContext(): LocalizerContextProps {
    return contextValue;
}
function handleParseError(error: ValueConversionParseError): void {
    console.error(error.key);
}

`;

exports[`codemod.recipes.namespaceToInterface > Converts namespaces to interfaces correctly > should migrate other.ts correctly 1`] = `
namespace DefaultLocalizerContextProvider {
    export type Props = string;
}
namespace LocalizerContext {
    export type Type = number;
}
namespace ValueConversion {
    export type ParseError = {
        key: string;
    };
}
const contextValue: LocalizerContext.Type = {
    dataFormats: {},
    locale: { language: "en", country: "US" },
    localizer: () => undefined,
    conversion: {
        parseValue: () => ({ value: undefined }),
        formatValue: () => ""
    }
};
function MyComponent(props: DefaultLocalizerContextProvider.Props): void {
    console.log(props.locale);
}
function useLocalizerContext(): LocalizerContext.Type {
    return contextValue;
}
function handleParseError(error: ValueConversion.ParseError): void {
    console.error(error.key);
}

`;
